--- a/.env
+++ b/.env
@@ -1,19 +1,27 @@
-# --- SERVER CONFIGURATION ---
+# Server
 PORT=5000
+NODE_ENV=production
 
-# --- DATABASE (MongoDB) ---
-# Apna MongoDB connection string yahan daal
-MONGO_URI=mongodb+srv://spxsolo:umaid2008@cluster0.7fbux.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# Database
+MONGO_URI=mongodb://localhost:27017/anicrew_db
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
 
-# --- QUEUE SYSTEM (Redis) ---
-# Agar VPS pe same server pe Redis install kiya hai toh ye default rahega
-REDIS_URL=redis://127.0.0.1:6379
+# Security
+JWT_SECRET=your_super_secret_jwt_key_here
+ADMIN_API_KEY=your_secure_admin_key_here
 
-# --- GOOGLE DRIVE STORAGE ---
-# Jis folder mein upload karna hai, uska ID yahan daal
-# (Folder link khol, URL ke end mein jo ID hai wo copy kar)
-GDRIVE_FOLDER_ID=1Z2pTC2x8zwM3qanNyDaU1EMJRDNHHsj2
+# Google Drive (Service Account Path relative to root)
+GOOGLE_APPLICATION_CREDENTIALS=secrets/service_account.json
+DRIVE_ROOT_FOLDER_ID=your_drive_folder_id
 
-# --- SCRAPER API (Teri Custom API) ---
-# Ye wahi link hai jo tune diya tha
-HIANIME_API_URL=https://hianimeapi-1vww.onrender.com
+# Google Gemini (AI Studio)
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# Telegram Bot
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+TELEGRAM_CHAT_ID=your_channel_id
+
+# Scraper Config
+HEADLESS_MODE=true
