--- a/.env
+++ b/.env
@@ -3,25 +3,27 @@ PORT=5000
 NODE_ENV=production
 
 # Database
-MONGO_URI=mongodb://localhost:27017/anicrew_db
+MONGO_URI=mongodb+srv://probito140:umaid2008@cluster0.1utfc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=JKmVW8WA7bu70G51cCOeQYM28wRcKEhx
 
 # Security
-JWT_SECRET=your_super_secret_jwt_key_here
-ADMIN_API_KEY=your_secure_admin_key_here
+JWT_SECRET=pxo0wZYqkSfY8Nrw6I5kj0RJ2m9ypBKW
+ADMIN_API_KEY=2HIh36ZY9a0huDdpR4ID2kmBALSFJTm4
 
 # Google Drive (Service Account Path relative to root)
-GOOGLE_APPLICATION_CREDENTIALS=secrets/service_account.json
-DRIVE_ROOT_FOLDER_ID=your_drive_folder_id
+GOOGLE_APPLICATION_CREDENTIALS=service_account.json
+DRIVE_ROOT_FOLDER_ID=1-AJwiJjI2NIfm1nvwDNBhMR4RVBki-NE
 
 # Google Gemini (AI Studio)
 GEMINI_API_KEY=your_gemini_api_key_here
 
 # Telegram Bot
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token
-TELEGRAM_CHAT_ID=your_channel_id
+TELEGRAM_BOT_TOKEN=8047158900:AAEfUCuBwgLpqfJ1q54TOGE827XmlpHp5YA
+TELEGRAM_CHAT_ID=-1002246083930
 
 # Scraper Config
 HEADLESS_MODE=true
+# External APIs
+HIANIME_API_URL=https://hianimeapi-1vww.onrender.com
