--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ NODE_ENV=production
 MONGO_URI=mongodb+srv://probito140:umaid2008@cluster0.1utfc.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
-REDIS_PASSWORD=JKmVW8WA7bu70G51cCOeQYM28wRcKEhx
+REDIS_PASSWORD=
 
 # Security
 JWT_SECRET=pxo0wZYqkSfY8Nrw6I5kj0RJ2m9ypBKW
